# Numerical-calculations-for-the-final-project

./: README.md
source/cpp/: CMakeLists.txt  algrithm_mimo.h  auxiliary.cpp  auxiliary.h  complex.cpp  complex.h  complex_matrix.cpp  complex_matrix.h  matrix.cpp  matrix.h  test.cpp  期末mimo.h
source/tex源码/: shuzhijisuan.tex
source/画图代码以及实验数据/: data.mat  fig1plot.mlx  fig2plot.mlx  fig3plot.mlx  fig4plot.mlx  fig5plot.mlx  fig6plot.mlx  fig7plot.mlx  fig8plot.mlx
数值计算方法2021期末考核/: 2021数值计算方法期末Project.doc
