cmake_minimum_required(VERSION 3.22)
project(c__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(c__
        algrithm_mimo.h
        auxiliary.cpp
        auxiliary.h
        complex.cpp
        complex.h
        complex_matrix.cpp
        complex_matrix.h
        matrix.cpp
        matrix.h
        test.cpp
        ÆÚÄ©mimo.h)
